--- a/assignment1/style.css
+++ b/assignment1/style.css
@@ -12,15 +12,27 @@
 /* I chose these two fonts to mimmic the style of the website im reviewing */
 
 p {
-  max-width: 200ch !important;
+  max-width: 170ch !important;
 }
 /* I had wanted the answers to reach the right end of the page for certain sections. 
   After asking advice from a friend, she pointed out that the coding in reset.css is preventing this but I wasnt sure if I was allowed to change this. She suggested this as a workaround*/
+
+div {
+  border-style: double;
+}
 
 * {
   font-family: "Mate", Courier, monospace;
   line-height: 1.5;
 }
+
+a {
+  color: black;
+  font-family: "Anton SC", "Franklin Gothic Medium", "Arial Narrow", Arial,
+    sans-serif;
+  font-size: 25px;
+}
+
 h1 {
   font-size: 100px;
   font-family: "Anton SC", "Franklin Gothic Medium", "Arial Narrow", Arial,
@@ -45,7 +57,7 @@ i also plan to  break up the questions into segments based on topic, for visual 
   font-size: 20px;
   padding-left: 20px;
   padding-right: 20px;
-  padding-bottom: 70px;
+  padding-bottom: 50px;
 }
 
 .right {
