--- a/assignment2/style.css
+++ b/assignment2/style.css
@@ -1,7 +1,7 @@
 :root {
-  --primary-bg-color: #f6edd9;
+  --primary-bg-color: #003d3a;
   --text-color: #454839;
-  --main-bg-color: #a43223;
+  --main-bg-color: #6e395a;
   --main-text-color: #ffff00;
   --main-btn-bg-color: #454839;
 }
