--- a/assignment2/style.css
+++ b/assignment2/style.css
@@ -74,11 +74,18 @@ body {
 header {
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   color: var(--main-text-color);
-  margin-left: 10px;
-  width: 100%;
+  background-color: var(--main-bg-color);
+  margin-left: 25px;
+  margin-top: 10px;
+  padding: 5px;
+  width: 50%;
+  border-radius: 5px;
   font-size: 70px;
   text-decoration: underline;
 }
+/* added a smaller background to the header since it looked like it was flating and disconnected from the rest of the website.
+for some reason when adding a box shadow its the same colour as the text and I cant change it, so i left it out.
+ */
 
 /* Navigation styling */
 
@@ -219,7 +226,6 @@ li {
   max-height: 500px;
   max-width: 700px;
   column-gap: 1rem;
-  border: 5px solid #003d3a;
   margin-bottom: 10px;
   cursor: pointer;
   border-radius: 5px;
