--- a/week9/cssanimation/style.css
+++ b/week9/cssanimation/style.css
@@ -62,8 +62,103 @@ button:hover {
 
 .duck-icon {
   transition: scale 0.4s ease;
+  animation-name: bounce;
+  animation-duration: 4s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
 }
 
 .duck-icon:hover {
   scale: 0.9;
+}
+
+@keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(30px);
+  }
+  60% {
+    transform: translateY(15px);
+  }
+}
+#side-drawer {
+  position: fixed;
+  top: 0;
+  left: -200px;
+  width: 200px;
+  min-height: 100vh;
+  /* transition: transform 0.5s ease-in-out; */
+  transition: translate 0.5s ease-in-out;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 1rem;
+  border-right: 2px dashed #e5e5cb7a;
+}
+
+#side-drawer ul > li {
+  padding: 10px;
+}
+#box {
+  min-width: 120px;
+  min-height: 120px;
+  background-color: transparent;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border: 27px dotted;
+  animation-name: border-wheel;
+  animation-duration: 5s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+@keyframes border-wheel {
+  0% {
+    border-color: purple;
+  }
+  20% {
+    border-color: red;
+  }
+  40% {
+    border-color: blue;
+  }
+  60% {
+    border-color: greenyellow;
+  }
+  80% {
+    border-color: yellow;
+  }
+  100% {
+    border-color: purple;
+  }
+}
+
+#spinner {
+  min-width: 100px;
+  min-height: 100px;
+  border: 5px solid white;
+  border-top-color: coral;
+  animation-name: spinning;
+  animation-duration: 6s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  border-radius: 50%;
+}
+
+@keyframes spinning {
+  0% {
+    rotate: 0deg;
+  }
+  100% {
+    rotate: 360deg;
+  }
 }
