--- a/assignment3/style.css
+++ b/assignment3/style.css
@@ -1,12 +1,27 @@
 body {
   padding: 0;
   margin: 0%;
+  background-color: hsl(231, 10%, 14%);
+  display: grid;
+  grid-row: 1;
+  display: flex;
+  justify-content: space-around;
 }
 
-.container {
+.outer {
+  border: pink dashed 2px;
+  margin: 10px;
+  width: 350px;
+  min-height: 50vh;
+  display: flex;
+  justify-self: center;
+  margin: 20px;
+}
+
+/* .container {
   background-color: #212228;
   height: 100vh;
-}
+} */
 
 #sticky-note {
   width: 100px;
