--- a/assignment3/style.css
+++ b/assignment3/style.css
@@ -8,14 +8,37 @@ body {
   justify-content: space-around;
 }
 
-.outer {
+h1 {
+  font-size: 3rem;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  padding: 10px;
+}
+
+.swim-lane {
   border: pink dashed 2px;
   margin: 10px;
-  width: 350px;
+  min-width: 350px;
   min-height: 50vh;
-  display: flex;
-  justify-self: center;
   margin: 20px;
+  gap: 10px;
+}
+
+.task {
+  background-color: aliceblue;
+  color: black;
+  margin: 10px;
+  padding: 12px;
+  border-radius: 10px;
+
+  font-size: 25px;
+  cursor: move;
+}
+
+.is-dragging {
+  scale: 1.05;
+  box-shadow: 5px;
+  rotate: 10deg;
+  color: aliceblue;
 }
 
 /* .container {
