--- a/assignment3/style.css
+++ b/assignment3/style.css
@@ -6,6 +6,7 @@ body {
   grid-row: 1;
   display: flex;
   justify-content: space-around;
+  font-family: "Courier New", Courier, monospace;
 }
 
 h1 {
@@ -17,8 +18,8 @@ h1 {
 .swim-lane {
   border: pink dashed 2px;
   margin: 10px;
-  min-width: 350px;
-  min-height: 50vh;
+  min-width: 150px;
+  height: fit-content;
   margin: 20px;
   gap: 10px;
 }
@@ -41,10 +42,41 @@ h1 {
   color: aliceblue;
 }
 
-/* .container {
+form {
+  background-color: aliceblue;
+  width: min-content;
+  padding: 5px;
+  margin: 10px;
+  gap: 10px;
+  border-radius: 10px;
+  display: flex;
+  gap: 10px;
+}
+
+textarea {
+  background-color: aliceblue;
+}
+
+form input,
+button {
+  width: 30px;
+  height: 30px;
+  padding: auto;
+  border: none;
+  background-color: transparent;
+  color: black;
+}
+
+.container {
+  margin: 20px;
+  padding: 10px;
+  border: palegreen dashed 5px;
   background-color: #212228;
-  height: 100vh;
-} */
+  min-width: 50%;
+  /* display: flex; */
+  overflow: hidden;
+  position: relative;
+}
 
 #sticky-note {
   width: 100px;
