sticky note wip

--- a/assignment3/style.css
+++ b/assignment3/style.css
@@ -55,6 +55,7 @@ form {
 
 textarea {
   background-color: aliceblue;
+  color: black;
 }
 
 form input,
@@ -65,6 +66,38 @@ button {
   border: none;
   background-color: transparent;
   color: black;
+  font-size: large;
+  cursor: pointer;
+}
+
+input {
+  border-radius: 100%;
+}
+
+#list textarea {
+  all: unset;
+  color: wheat;
+}
+
+#list .sticky-note {
+  background-color: #e6b905;
+  width: max-content;
+  height: 150px;
+  border-radius: 10px;
+  border-top: rgb(30, 30, 30) 30px solid;
+  box-shadow: 20px black;
+  padding: 10px;
+  position: absolute;
+}
+
+#list .sticky-note span {
+  position: absolute;
+  bottom: 100%;
+  right: 0;
+  font-family: cursive;
+  font-size: 2rem;
+  padding-right: 10px;
+  cursor: pointer;
 }
 
 .container {
