--- a/assignment3/style.css
+++ b/assignment3/style.css
@@ -2,10 +2,7 @@ body {
   padding: 0;
   margin: 0%;
   background-color: hsl(231, 10%, 14%);
-  display: grid;
-  grid-row: 1;
   display: flex;
-  justify-content: space-around;
   font-family: "Courier New", Courier, monospace;
 }
 
@@ -15,13 +12,23 @@ h1 {
   padding: 10px;
 }
 
+#todo-input {
+  padding: 1px;
+  min-width: 255px;
+  margin-right: auto;
+  outline: none;
+}
+
+.lanes {
+  display: flex;
+  gap: 7px;
+  margin-right: 20px;
+}
+
 .swim-lane {
   border: pink dashed 2px;
-  margin: 10px;
   min-width: 150px;
   height: fit-content;
-  margin: 20px;
-  gap: 10px;
 }
 
 .task {
@@ -30,7 +37,6 @@ h1 {
   margin: 10px;
   padding: 12px;
   border-radius: 10px;
-
   font-size: 25px;
   cursor: move;
 }
@@ -54,24 +60,25 @@ form {
 }
 
 textarea {
-  background-color: aliceblue;
-  color: black;
+  color: black !important;
 }
 
 form input,
 button {
+  all: unset;
   width: 30px;
   height: 30px;
-  padding: auto;
-  border: none;
+  margin: 5px;
+  align-self: center;
+  border-color: #212228;
   background-color: transparent;
   color: black;
-  font-size: large;
+  font-size: 1rem;
   cursor: pointer;
 }
 
 input {
-  border-radius: 100%;
+  /* border-radius: 100%; */
 }
 
 #list textarea {
