--- a/assignment3/style.css
+++ b/assignment3/style.css
@@ -37,7 +37,7 @@ h1 {
   margin: 10px;
   padding: 12px;
   border-radius: 10px;
-  font-size: 25px;
+  font-size: 1.2rem;
   cursor: move;
 }
 
@@ -91,17 +91,21 @@ input {
   width: 150px;
   height: 150px;
   border-radius: 10px;
-  border-top: rgb(30, 30, 30) 30px solid;
-  box-shadow: 20px black;
+  /* border-top: rgb(30, 30, 30) 30px solid; */
   padding: 10px;
   position: absolute;
+  box-shadow: 10px 10px black;
+  color: #212228;
+  font-size: 1rem;
+  text-align: center;
+  padding: 60px 0;
 }
 
 #list .sticky-note span {
   position: absolute;
   bottom: 100%;
   right: 0;
-  font-family: cursive;
+  /* font-family: cursive; */
   font-size: 2rem;
   padding-right: 10px;
   cursor: pointer;
