--- a/assignment3/style.css
+++ b/assignment3/style.css
@@ -107,7 +107,7 @@ button {
   cursor: pointer;
 }
 
-.container {
+#container {
   margin: 20px;
   padding: 10px;
   border: palegreen dashed 5px;
